--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,18 @@
     <build>
         <pluginManagement>
             <plugins>
+             <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.2</version>
+                    <configuration>
+                        <argLine>${surefire.argline}</argLine>
+                        <includes>
+                            <include>**/*Test.java</include>
+                            <include>**/*Spec.class</include>
+                        </includes>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
