--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,9 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.2</version>
                     <configuration>
-                        <argLine>${surefire.argline}</argLine>
+                        <forkCount>3</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                         <includes>
                             <include>**/*Test.java</include>
                             <include>**/*Spec.class</include>
