--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,7 @@
 -->
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-     <parent>
-        <groupId>ddf</groupId>
-        <artifactId>distribution</artifactId>
-        <version>2.17.0</version>
-    </parent>
-    <groupId>ddf.distribution</groupId>
+    <groupId>org.codice</groupId>
     <artifactId>sdk</artifactId>
     <packaging>pom</packaging>
     <name>DDF SDK</name>
@@ -119,12 +114,20 @@
         <module>sample-process</module>
         <module>sdk-app</module>
     </modules>
+    <dependencies>
+      <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>commons-collections</groupId>
                 <artifactId>commons-collections</artifactId>
-                <version>${commons-collections.version}</version>
+                <version>3.2.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -148,6 +151,13 @@
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
+                     <dependencies>
+                        <dependency>
+                            <groupId>org.codice.maven</groupId>
+                            <artifactId>jacoco</artifactId>
+                            <version>0.2</version>
+                        </dependency>
+                    </dependencies>
                     <executions>
                         <execution>
                             <id>default-check</id>
@@ -187,6 +197,19 @@
                     <artifactId>dependency-check-maven</artifactId>
                     <configuration>
                         <skip>true</skip>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>3.5.1</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <!-- Disabled OBR to increase build speed -->
+                        <obrRepository>NONE</obrRepository>
+                        <instructions>
+                            <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        </instructions>
                     </configuration>
                 </plugin>
             </plugins>
