--- a/sample-metrics/pom.xml
+++ b/sample-metrics/pom.xml
@@ -16,7 +16,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>sdk</artifactId>
-        <groupId>ddf.distribution</groupId>
+        <groupId>org.codice</groupId>
         <version>2.18.0</version>
     </parent>
     <artifactId>sample-metrics</artifactId>
@@ -46,6 +46,7 @@
         <dependency>
             <groupId>org.rrd4j</groupId>
             <artifactId>rrd4j</artifactId>
+            <version>3.3.1</version>
         </dependency>
     </dependencies>
     <build>
