--- a/sample-transformers/xslt-identity-input-transformer/pom.xml
+++ b/sample-transformers/xslt-identity-input-transformer/pom.xml
@@ -16,7 +16,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>sample-transformers</artifactId>
-        <groupId>ddf.distribution</groupId>
+        <groupId>org.codice</groupId>
         <version>2.18.0</version>
     </parent>
     <properties>
