--- a/artemis-sandbox/pom.xml
+++ b/artemis-sandbox/pom.xml
@@ -18,8 +18,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>ddf.distribution</groupId>
         <artifactId>sdk</artifactId>
+        <groupId>org.codice</groupId>
         <version>2.18.0</version>
     </parent>
     <groupId>org.codice.ddf.broker</groupId>
