--- a/artemis-sandbox/pom.xml
+++ b/artemis-sandbox/pom.xml
@@ -24,6 +24,9 @@
     </parent>
     <groupId>org.codice.ddf.broker</groupId>
     <artifactId>artemis-sandbox</artifactId>
+    <properties>
+      <netty.version>4.1.24.Final</netty.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.camel</groupId>
@@ -53,7 +56,7 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-jms-client</artifactId>
-            <version>${artemis.version}</version>
+            <version>2.6.2</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
