--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,3 +39,15 @@ jobs:
 
       # run tests!
       - run: mvn integration-test
+
+      #Save Test Results for metrics
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-results/junit
